# deriv-market-datahub

./: .flake8  .gitignore  .pre-commit-config.yaml  Architecture.md  LICENSE  Makefile  README copy.md  README.md  build_and_push.sh  dockerfile  noxfile.py  pyproject.toml
.circleci/: config.yml
.dlt/: secrets.toml
airflow/: dbt_create_candles_model.py  dbt_create_model.py  dbt_create_static_model.py  dbt_create_ticks_model.py  dbt_with_kubernetes.py  load_market_candles_history_data.py  load_market_data.py  load_market_static_data.py  load_market_ticks_history_data.py
bq/: schema.sql
dbt/: Dockerfile  dbt_project.yml  profiles.yml
dbt/models/main/: candles_history.sql  schema.yml  symbols.sql  ticks_history.sql
src/: deriv.py  importer.py  main.py
terraform/: .terraform.lock.hcl  TODO.md  main.tf  outputs.tf  post-setup.sh  terraform.tfvars  variables.tf
